<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddReunion"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_reunion_activity"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_add_reunion_choose_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_reunion_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="@dimen/padding_normal_size"
        android:paddingStart="@dimen/padding_normal_size"
        android:layout_margin="@dimen/margin_normal_size"
        android:hint="Heure :"
        android:textSize="@dimen/text_large_size"
        android:textAlignment="viewStart"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_add_reunion_hour_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_reunion_toolbar"
        app:layout_constraintStart_toEndOf="@+id/activity_add_reunion_choose_time_txt"
        android:layout_margin="@dimen/margin_normal_size"
        android:padding="@dimen/padding_normal_size"
        android:hint="Choisir"
        android:textSize="@dimen/text_large_size"
        android:onClick="openHourPicker"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_add_reunion_room_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal_size"
        android:text="Salle de réunion"
        android:paddingVertical="@dimen/margin_normal_size"
        android:textSize="@dimen/text_large_size"
        app:layout_constraintStart_toStartOf="@id/activity_add_reunion_choose_time_txt"
        app:layout_constraintTop_toBottomOf="@id/activity_add_reunion_choose_time_txt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_add_reunion_room_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_add_reunion_choose_time_txt"
        app:layout_constraintStart_toEndOf="@id/activity_add_reunion_room_txt"
        android:hint="Choisir"
        android:textSize="@dimen/text_large_size"
        android:padding="@dimen/padding_normal_size"
        android:layout_marginTop="@dimen/margin_normal_size"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_add_reunion_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_add_reunion_room_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/padding_normal_size"
        android:layout_marginVertical="@dimen/margin_normal_size"
        android:layout_marginHorizontal="@dimen/margin_normal_size"
        android:hint="Votre nom"
        android:textSize="@dimen/text_large_size"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activity_add_reunion_members_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="2"
        android:layout_marginVertical="@dimen/margin_normal_size"
        android:layout_marginTop="@dimen/margin_normal_size"
        android:hint="participants"
        android:padding="@dimen/padding_normal_size"
        android:textSize="@dimen/text_large_size"
        app:layout_constraintStart_toStartOf="@id/activity_add_reunion_name_input"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_reunion_name_input"
        app:layout_constraintEnd_toStartOf="@+id/activity_add_reunion_members_btn"
        android:maxLines="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_add_reunion_members_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_reunion_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_add_reunion_members_input"
        android:padding="@dimen/padding_normal_size"
        android:layout_margin="@dimen/margin_normal_size"
        android:text="ajouter" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_add_reunion_members_list_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintStart_toStartOf="@+id/activity_add_reunion_members_input"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_reunion_members_input"
        app:layout_constraintBottom_toTopOf="@+id/activity_add_reunion_validate_btn"
        android:layout_margin="@dimen/margin_normal_size"
        android:padding="@dimen/padding_normal_size"
        android:textSize="@dimen/text_large_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_add_reunion_validate_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/activity_add_reunion_members_list_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padding_normal_size"
        android:layout_margin="@dimen/margin_normal_size"
        android:text="valider"
        android:textSize="@dimen/text_large_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>