...
        android:text="Participants"
        android:textSize="@dimen/text_extralarge_size"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_detail_reunion_member_list_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_reunion_member_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_large_size"
...
